# TinyTnference

./: CMakeLists.txt  README.md  run.sh
include/: layer.hpp  tensor.hpp
scripts/: export_weights.py  prepare_batch.py  test_digit.py  train_minst.py
src/: layer.cpp  main.cpp  tensor.cpp
